# bnb-cookiecutter-example-test

./: .bumpversion.cfg  .readthedocs.yml  README.md  noxfile.py  pyproject.toml  tasks.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
docs/: Makefile  conf.py  index.rst  make.bat  reference.rst
src/bnb_cookiecutter_example_test/: __init__.py
tests/: __init__.py  test_bnb_cookiecutter_example_test.py
