[tool.poetry]
name = "bnb-cookiecutter-example-test"
version = "0.1.0"
description = "A project."
authors = ["First Last  <you@provider.com>"]
readme = "README.md"
homepage = "https://github.com/bnbalsamo/bnb-cookiecutter-example-test"

[tool.poetry.dependencies]
python = "^3.7.0"
sphinx = {version = "*", optional = true}
sphinx-autodoc-typehints = {version = "*", optional = true}
sphinx-rtd-theme = {version = "*", optional = true}
pytest = {version = "*", optional = true}
coverage = {version = "*", optional = true, extras = ["toml"]}
typing-extensions = {version = "*", optional = true}

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "typing-extensions",
]
tests = [
    "pytest",
    "coverage",
]

[tool.poetry.dev-dependencies]
build = ">=0.5.0"
bump2version = "*"
invoke = "^1"
mypy = ">=0.910"
nox = "*"
nox-poetry = "*"
packaging = "*"
pre-commit = "^2.9.2"
pylint = "*"
safety = "*"
shiv = ">=0.5.2"
sphinx-autobuild = "*"
toml = "*"
twine = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["bnb_cookiecutter_example_test"]

[tool.coverage.report]
fail_under = 80

[tool.coverage.paths]
source = [
   "src",
   ".tox/*/site-packages"
]

[tool.mypy]
warn_unused_configs = true
check_untyped_defs = true
